# bayesian-stock-forecasting

./: README.md  app_gui.py  config.py  main.py  pyproject.toml  requirements.txt  run_week1.py  run_week2_3.py
app/: main.py  mlflow_logger.py  model_registry.py  schemas.py
data/processed/: nifty50_features.csv  reliance_features.csv  sp500_features.csv
data/raw/: nifty50_raw.csv  reliance_raw.csv  sp500_raw.csv
mlruns/649217549966263391/: meta.yaml
mlruns/649217549966263391/002d3b9daac24feab6db32f1e0eb6b89/: meta.yaml
mlruns/649217549966263391/0319b39f844744789eb460e1a4931e95/: meta.yaml
mlruns/649217549966263391/04df279eda2940d4bb6f5d63a4e64fc0/: meta.yaml
mlruns/649217549966263391/05aa7d85f0a64045ade429d57ea7f35d/: meta.yaml
mlruns/649217549966263391/08868c4596a64337a802cfcc57289d45/: meta.yaml
mlruns/649217549966263391/0c85741c03104f81a433049f8060904e/: meta.yaml
mlruns/649217549966263391/0d038286635146fa885cab676f6a3724/: meta.yaml
mlruns/649217549966263391/0d4565edd16a47489cd423407b1e4050/: meta.yaml
mlruns/649217549966263391/0e8cc5d9bbb64002955b03a574e16a58/: meta.yaml
mlruns/649217549966263391/0ef7dfb30e024cad8f38c38f451a0853/: meta.yaml
mlruns/649217549966263391/1a2eb56c64444c16a08a56251fc9784f/: meta.yaml
mlruns/649217549966263391/1ae9d2127e5348afb6ade9e29a38bb80/: meta.yaml
models/: xgboost_model.pkl
notebooks/: 01_eda.ipynb
src/: data_pipeline.py  eda.py  features.py  metrics.py  model_bayesian.py  model_comparison.py  model_sarima.py  model_xgboost.py  splitter.py
test/: test_api.py
(+488 files in other folders)
