[project]
name = "bayesian-stock-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.17.0",
    "fastapi>=0.110.0",
    "loguru>=0.7.0",
    "matplotlib>=3.8.0",
    "mlflow>=2.10.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "pmdarima>=2.0.4",
    "pydantic>=2.6.0",
    "pymc>=5.10.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
    "ta>=0.11.0",
    "tensorflow>=2.15.0",
    "tqdm>=4.66.0",
    "uvicorn>=0.27.0",
    "xgboost>=2.0.0",
    "yfinance>=0.2.36",
]
